# wasm-ecs-game-profile

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/: .gitignore  README.md  shaders.igpack-plan.json  skybox.igpack-plan.json  ybot.igpack-plan.json
assets/prebuilt/: ybot.igpack
assets/shaders/: aces_tonemapping.wgsl  animated_pbr.wgsl  bg_skybox.wgsl  brdf_lut.wgsl  equirect_to_cubemap.wgsl  hdr_mipgen.wgsl  irradiance_gen.wgsl  prefilter_gen.wgsl  static_pbr.wgsl
cmake/: export_build_tools.cmake  gen_flatbuffer_cpp.cmake  gen_igpack.cmake  import_build_tools.cmake  wasm_helpers.cmake
igdemo/: igdemo-app.cc  native-main.cc  scheduler.cc  wasm-bindings.cc
igdemo/assets/: arena.cc  core-shaders.cc  projectiles.cc  skybox.cc  ybot.cc
igdemo/logic/: enemy.cc  hero.cc  spatial-index.cc
igdemo/platform/: keyboard-mouse-input-emitter.cc
igdemo/platform/web/: raii-fetch.cc
igdemo/render/: animated-pbr.cc  bg-skybox.cc  ctx-components.cc  pbr-geo-pass.cc  static-pbr.cc  tonemap-pass.cc  wgpu-helpers.cc
igdemo/render/geo/: cube.cc  fullscreen_quad.cc  quad.cc  sphere.cc
igdemo/render/processing/: brdflut.cc  equirect-to-cubemap.cc  gen-mips.cc  irradiance-map-generator.cc  prefilter-env-gen.cc
igdemo/systems/: animation.cc  attach-renderables.cc  destroy-actor.cc  enemy-locomotion.cc  fly-camera.cc  hero-locomotion.cc  locomotion.cc  move-projectile.cc  pbr-geo-pass.cc  projectile-hit.cc  skybox.cc  spawn-projectiles.cc  tonemap-pass.cc  update-health.cc  update-spatial-index.cc
include/igdemo/: igdemo-app.h  scheduler.h
include/igdemo/assets/: arena.h  core-shaders.h  projectiles.h  skybox.h  ybot.h
include/igdemo/logic/: combat.h  enemy-strategy.h  enemy.h  framecommon.h  hero.h  levelmetadata.h  locomotion.h  projectile.h  renderable.h  spatial-index.h
include/igdemo/platform/: input-emitter.h  keyboard-mouse-input-emitter.h
include/igdemo/platform/web/: raii-fetch.h
include/igdemo/render/: animated-pbr.h  bg-skybox.h  camera.h  ctx-components.h  pbr-common.h  pbr-geo-pass.h  skeletal-animation.h  static-pbr.h  tonemap-pass.h  wgpu-helpers.h  world-transform-component.h
include/igdemo/render/geo/: cube.h  fullscreen_quad.h  quad.h  sphere.h
include/igdemo/render/processing/: brdflut.h  equirect-to-cubemap.h  gen-mips.h  irradiance-map-generator.h  prefilter-env-gen.h
include/igdemo/systems/: animation.h  attach-renderables.h  destroy-actor.h  enemy-locomotion.h  fly-camera.h  hero-locomotion.h  locomotion.h  move-projectile.h  pbr-geo-pass.h  projectile-hit.h  skybox.h  spawn-projectiles.h  tonemap-pass.h  update-health.h  update-spatial-index.h
lib/: CMakeLists.txt
lib/igasset/: CMakeLists.txt
lib/igasset/include/igasset/: draco_dec.h  igpack_decoder.h  ozz_jobs.h  ozz_wrappers.h  raw_hdr.h  vertex_types.h
lib/igasset/schema/: igasset.fbs
lib/igasset/src/: draco_dec.cc  igpack_decoder.cc  ozz_jobs.cc  raw_hdr.cc
lib/igecs/: CMakeLists.txt  config.h.in
lib/igecs/include/igecs/: ctti_type_id.h  evt_queue.h  scheduler.h  world_view.h
lib/igecs/include/igecs/profile/: frame_profiler.h
lib/igecs/src/: ctti_type_id.cc  scheduler.cc  world_view.cc
lib/igecs/src/profile/: frame_profiler.cc
lib/igecs/test/: ctti_type_id_test.cc  scheduler_test.cc  world_view_test.cc
test/: entt-usage-test.cc
tools/: CMakeLists.txt
tools/enumerate_assimp/: CMakeLists.txt  main.cc
tools/igpack-gen/: CMakeLists.txt  main.cc
tools/igpack-gen/include/igpack-gen/: assimp-animation-processor.h  assimp-geo-processor.h  assimp-util.h  hdr-image.h  plan-executor.h  wgsl-processor.h
tools/igpack-gen/schema/: igpack-plan.fbs
tools/igpack-gen/src/: assimp-animation-processor.cc  assimp-geo-processor.cc  assimp-util.cc  hdr-image.cc  plan-executor.cc  wgsl-processor.cc
webview/: index.html  simple-server.js
